Fix spacing tra articoli

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ main {
 .article {
     display: flex;
     overflow: hidden;
-    height: 200px;
+    height: 220px;
     align-items: center;
 }
 
